-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 9.0.2, Qt Creator 10.0.0-beta2
-
None
-
f112f8351 (10.0)
When loading project from GitLab, the plugin shows the visibility information with public as default value. The main issue is that with the current query done to the GitLab API, the visibility field is not returned hence users get mislead about the current status of the projects.
Two options to fix this:
- Keep the query as is but remove the default "public" for the field
- Use the full query
The former allows to keep traffic lower and would not change the current behaviour while the latter would increase the traffic for a single field to be correctly shown which might not be a good enough justification for the change.
| For Gerrit Dashboard: QTCREATORBUG-28882 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 465729,1 | GitLab plugin: Remove visibility public default value | master | qt-creator/qt-creator | Status: ABANDONED | +1 | 0 |
| 465748,3 | GitLab plugin: Remove visibility public default value | 10.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |