GitLab plugin: Remove visibility public default value

The query currently used does not provide this value and showing
public for everything is misleading to the users.

Fixes: QTCREATORBUG-28882
Change-Id: Ie47a4fa24e4b1e90b8d1a53c5819742f2b5aca71
Reviewed-by: Christian Stenger <christian.stenger@qt.io>