src/plugins/gitlab/gitlabdialog.cpp
@@ -338,7 +338,7 @@ void GitLabDialog::handleProjects(const Projects &projects)
     // TODO use a real model / delegate..?
     listModel->setDataAccessor([](Project *data, int /*column*/, int role) -> QVariant {
         if (role == Qt::DisplayRole)
-            return QString(data->displayName + " (" + data->visibility + ')');
+            return data->displayName;
         if (role == Qt::UserRole)
             return QVariant::fromValue(*data);
         return QVariant();
